--- a/PicoW-freertos-smp/src/CmakeLists.txt
+++ b/PicoW-freertos-smp/src/CmakeLists.txt
@@ -6,12 +6,13 @@ add_executable(picow-freertos-smp
 
 target_include_directories(${ProjectName} PRIVATE
     ${CMAKE_CURRENT_LIST_DIR}
+    ${CMAKE_CURRENT_LIST_DIR}/arch
 )
 
 target_link_libraries(${ProjectName} 
     pico_stdlib 
     pico_multicore
-    pico_cyw43_arch_none
+    pico_cyw43_arch_lwip_sys_freertos
     FreeRTOS-Kernel-Heap4 
     )
     
