--- a/PicoW-freertos-smp/src/CmakeLists.txt
+++ b/PicoW-freertos-smp/src/CmakeLists.txt
@@ -4,7 +4,7 @@ add_executable(picow-freertos-smp
     modbus_slave.c
 )
 
-target_include_directories(${ProjectName} PRIVATE
+target_include_directories(${ProjectName} PUBLIC
     ${CMAKE_CURRENT_LIST_DIR}
 )
 
